--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "Dashboard": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Dashboard"
+    }
+  },
+  "defaultProject": "Dashboard",
+  "cli": {
+    "analytics": "971414fb-b5b5-4145-b02d-e072044247b0"
+  }
 }
